--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,5 @@
-__pycache__/
-venv/
-*/__pycache__/
-*/*/__pycache__/
-*.pyc
-*/*.pyc
-*/*/*.pyc
-/.vs/oled_server/v15
+﻿################################################################################
+# This .gitignore file was automatically created by Microsoft(R) Visual Studio.
+################################################################################
+
 /.vs
-/oled_server.pyproj
-/oled_server.sln
-*.user
-logs/*.log
-!logs/.log
-/config/master.py
